# shieldz-rust

./: CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  scorecard.yml
src/: client.rs  error.rs  lib.rs  webhooks.rs
tests/: integration.rs
